# scrape_rethdb_data

./: .gitignore  ALLOY_SOL_MACRO_GUIDE.md  Cargo.toml  DB_VS_RPC_TEST.md  LICENSE-MIT  PYTHON_DB_VERIFICATION.md  QUICKSTART.md  README.md  SLOT_VERIFICATION_GUIDE.md  SUMMARY.md  USAGE.md  V4_SLOT_CALCULATION_FIX.md  benchmark_vs_rpc.py  calculate_storage_slot.py  claude.md  debug_storage.py  debug_storage_slot.py  pyproject.toml  python_example.py  run_python_example.sh  run_python_verification.sh  run_validation.sh  test_db_access.sh  test_decode.py  test_fresh.py  test_simple.py  test_slot0_only.py  test_storage_calc.py  test_with_db.py  validate_against_rpc.py  validate_against_rpc_v2.py  validate_simple.py  validate_v4_bitmaps.py  validate_with_decoder.py  verify_db_vs_rpc.py
examples/: collect_pool_data.rs  historical_pool_state.rs  historical_v4_pool.rs  scan_multi_pools.rs  scan_swap_events.rs  test_storage_slot.rs  test_uniswap_v2_reserves.rs  test_v4_live.rs  test_v4_slot.rs  validate_db_vs_rpc.rs  verify_db_vs_rpc.rs  verify_slot_calculations.rs
src/: contracts.rs  decoding.rs  events.rs  historical.rs  lib.rs  pool_state.rs  python.rs  readers.rs  readers_old.rs  storage.rs  tick_math.rs  types.rs
tests/: db_vs_rpc_benchmark.rs
